[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_utils"
version = "0.0.1"
authors = [
    { name = "Anthony Sifontes", email = "anthony.sifontes@gmail.com" },
]
maintainers = [
    { name = "Anthony Sifontes", email = "anthony.sifontes@gmail.com" },
]
description = "Utility structures and functions for working with graphs while maintaining your sanity."
readme = README.md
requires = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
